@@ -4,7 +4,7 @@
  * Copyright (c) 2013,
  * Forschungszentrum Juelich GmbH, Germany
  *
- * Copyright (c) 2013, 2014,
+ * Copyright (c) 2013-2015,
  * Technische Universitaet Dresden, Germany
  *
  * This software may be modified and distributed under the terms of
@@ -81,6 +81,16 @@ SCOREP_Instrumenter_CompilerAdapter::SCOREP_Instrumenter_CompilerAdapter( void )
 {
 //    m_default_off.push_back( SCOREP_INSTRUMENTER_ADAPTER_COBI );
     m_default_off.push_back( SCOREP_INSTRUMENTER_ADAPTER_PDT );
+}
+
+bool
+SCOREP_Instrumenter_CompilerAdapter::supportInstrumentFilters( void ) const
+{
+#if HAVE_BACKEND( GCC_PLUGIN_SUPPORT )
+    return true;
+#else
+    return false;
+#endif
 }
 
 std::string
